<resources>
    <string name="app_name">CPU Adaptive Control</string>
    <string name="bubble_button">Bubble Button</string>
    <string name="notification_bar">Notification Bar</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="settings">Settings</string>
    <string name="usage_stats">Usage Stats</string>
    <string name="main_menu">Main Menu</string>
    <string name="request">Request</string>
</resources>
