<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.v4.view.PagerTabStrip
            android.id="@+id/pager_tab_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android.layout_gravity="top" />

    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Switch
        android:id="@+id/BubbleButtonSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bubble_button" />

    <Switch
        android:id="@+id/NotificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_bar" />
</LinearLayout>